--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,12 +28,14 @@ body {
   .time-block{
     text-align: center;
     border-radius: 15px;
+    border: 2px solid green
   }
   
   .row {
     white-space: pre-wrap;
     height: 80px;
     border-top: 1px solid white;
+    border: 2px solid pink
 
   }
   
@@ -70,4 +72,8 @@ body {
     font-size: 20px;
     transition: all .3s ease-in-out;
   }
+
+  /* .container{
+      border: 2px solid blue
+  } */
   
