--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,7 @@ body {
     line-height: 1;
   }
 
-
-  
+  /* stylings for a textarea added in jquery */
   textarea{
     background: transparent;
     border: none;
@@ -27,11 +26,13 @@ body {
     white-space: pre-wrap;
   }
   
+  /* area for div showing hour of the day */
   .time-block{
     text-align: center;
     border-radius: 15px;
   }
   
+  /* for all rows with time, textarea, and button */
   .row {
     white-space: pre-wrap;
     height: 80px;
@@ -39,22 +40,26 @@ body {
 
   }
   
+  /* text area styling */
   .hour {
     background-color: #ffffff;
     color: #000000;
     border-top: 1px dashed #000000;
   }
   
+  /* to use for hours before current hour */
   .past {
     background-color: #d3d3d3;
     color: white;
   }
   
+  /* to use to highlight current hour row */
   .present {
     background-color: #ff6961;
     color: white;
   }
   
+  /* to use for future hours from current hour */
   .future {
     background-color: #77dd77;
     color: white;
